#1 - add: pass hashing, password conf

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -18,6 +18,8 @@
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
+        {{ form_row(registrationForm.confirmPassword) }}
+        {{ form_row(registrationForm.birth_date) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn">Register</button>
