#1 - add: working tailwind conf, sample auth styling

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,21 +7,46 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
 
-    {{ form_errors(registrationForm) }}
+<div class="max-w-xl mx-auto bg-white bg-opacity-90 p-8 rounded-2xl shadow-md">
+
+    <h2 class="text-2xl font-semibold text-dark mb-6">Register</h2>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.name) }}
-        {{ form_row(registrationForm.surname) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.confirmPassword) }}
-        {{ form_row(registrationForm.birth_date) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+        <div class="space-y-4">
+            {{ form_row(registrationForm.email, {
+                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
+                label_attr: { class: 'text-muted font-medium' }
+            }) }}
+            {{ form_row(registrationForm.plainPassword, {
+                label: 'Hasło',
+                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
+                label_attr: { class: 'text-muted font-medium' }
+            }) }}
+            {{ form_row(registrationForm.confirmPassword, {
+                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
+                label_attr: { class: 'text-muted font-medium' }
+            }) }}
+            {{ form_row(registrationForm.name, {
+                attr: { class: 'primary w-full rounded-lg bg-light border border-muted text-base' },
+                label_attr: { class: 'primary text-muted font-medium' }
+            }) }}
+            {{ form_row(registrationForm.surname, {
+                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
+                label_attr: { class: 'text-muted font-medium' }
+            }) }}
+            {{ form_row(registrationForm.birth_date, {
+                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
+                label_attr: { class: 'text-muted font-medium' }
+            }) }}
+            {{ form_row(registrationForm.agreeTerms, {
+                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
+                label_attr: { class: 'text-muted font-medium' }
+            }) }}
+            <button type="submit"
+                class="w-full bg-primary text-white font-semibold py-2 rounded-lg hover:bg-opacity-90 transition">
+                Register
+            </button>
+        </div>
     {{ form_end(registrationForm) }}
 {% endblock %}
