--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,6 +7,7 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
+{% block navbar %}{% endblock %}
 
 <div class="max-w-xl mx-auto bg-white bg-opacity-90 p-8 rounded-2xl shadow-md">
 
