#1 - add: register styling

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     {% block stylesheets %}{% endblock %}
 </head>
-<body class="bg-light text-base font-sans">
+<body class="bg-white text-base font-sans">
 
     {% block navbar %}
         {% include 'partials/navbar.html.twig' %}
