--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -1,4 +1,4 @@
-    <header class="bg-dark text-light py-4 shadow-md">
+    <header class="bg-silver text-light py-4 shadow-md">
         <div class="container mx-auto flex justify-between items-center px-4">
             <h1 class="text-xl font-bold tracking-wide">wobbleIT</h1>
             <nav class="space-x-4">
