--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,44 +8,36 @@
     {% endfor %}
 
 {% block navbar %}{% endblock %}
-
-<div class="max-w-xl mx-auto bg-white bg-opacity-90 p-8 rounded-2xl shadow-md">
-
+ 
+<div class="max-w-sm mx-auto bg-opacity-90 p-8 rounded-2xl shadow-md">
+    {# <img src="{{ asset('images/logo.png') }}" alt="Logo"> #}
     <h2 class="text-2xl font-semibold text-dark mb-6">Register</h2>
 
     {{ form_start(registrationForm) }}
         <div class="space-y-4">
             {{ form_row(registrationForm.email, {
-                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
-                label_attr: { class: 'text-muted font-medium' }
+                attr: { class: 'block w-full border-0 border-b border-gray-400 focus:darkgreen focus:outline-none focus:ring-0 pt-5', placeholder: 'Email'},
             }) }}
             {{ form_row(registrationForm.plainPassword, {
-                label: 'Hasło',
-                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
-                label_attr: { class: 'text-muted font-medium' }
+                attr: { class: 'block w-full border-0 border-b border-gray-400 focus:darkgreen focus:outline-none focus:ring-0 pt-5', placeholder: 'Password'},
             }) }}
             {{ form_row(registrationForm.confirmPassword, {
-                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
-                label_attr: { class: 'text-muted font-medium' }
+                attr: { class: 'block w-full border-0 border-b border-gray-400 focus:darkgreen focus:outline-none focus:ring-0 pt-5', placeholder: 'Confirm password'},
             }) }}
             {{ form_row(registrationForm.name, {
-                attr: { class: 'primary w-full rounded-lg bg-light border border-muted text-base' },
-                label_attr: { class: 'primary text-muted font-medium' }
+                attr: { class: 'block w-full border-0 border-b border-gray-400 focus:darkgreen focus:outline-none focus:ring-0 pt-5', placeholder: 'Name'},
             }) }}
             {{ form_row(registrationForm.surname, {
-                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
-                label_attr: { class: 'text-muted font-medium' }
+                attr: { class: 'block w-full border-0 border-b border-gray-400 focus:darkgreen focus:outline-none focus:ring-0 pt-5', placeholder: 'Surname'},
             }) }}
             {{ form_row(registrationForm.birth_date, {
-                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
-                label_attr: { class: 'text-muted font-medium' }
+                attr: { class: 'block w-full border-0 border-b border-gray-400 focus:darkgreen focus:outline-none focus:ring-0 pt-5', placeholder: 'Birth Date'},
             }) }}
             {{ form_row(registrationForm.agreeTerms, {
-                attr: { class: 'w-full rounded-lg bg-light border border-muted text-base' },
-                label_attr: { class: 'text-muted font-medium' }
+                attr: { class: ''},
             }) }}
             <button type="submit"
-                class="w-full bg-primary text-white font-semibold py-2 rounded-lg hover:bg-opacity-90 transition">
+                class="w-full bg-darkgreen text-white font-semibold py-2 rounded-lg hover:bg-opacity-90 transition">
                 Register
             </button>
         </div>
