add: login and register base styling

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,12 +13,11 @@
                 You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
             </div>
         {% endif %}
+        <div class="max-w-sm mx-auto bg-opacity-90 p-8 rounded-2xl shadow-md shadow-lightgreen">
+        <h2 class="text-2xl font-semibold text-dark mb-6">Sign in</h2>
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="username">Id</label>
-        <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+        <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control block w-full border-0 border-b border-gray-400 focus:darkgreen focus:outline-none focus:ring-0 pt-5" autocomplete="username" required autofocus placeholder="Email">
+        <input type="password" name="_password" id="password" class="form-control block w-full border-0 border-b border-gray-400 focus:darkgreen focus:outline-none focus:ring-0 pt-5" autocomplete="current-password" required placeholder="Password">
         <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
 
         {#
@@ -30,9 +29,11 @@
                 <label for="_remember_me">Remember me</label>
             </div>
         #}
-
-        <button class="btn btn-lg btn-primary" type="submit">
+        <button type="submit"
+            class="w-full bg-darkgreen text-white font-semibold py-2 rounded-lg hover:bg-opacity-90 transition mt-5">
             Sign in
         </button>
+        </div>
+
     </form>
 {% endblock %}
