--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,13 +6,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     {% block stylesheets %}{% endblock %}
 </head>
-<body class="bg-white text-base font-sans">
+<body class="bg-white text-base font-sans flex flex-col h-screen justify-between">
 
     {% block navbar %}
         {% include 'partials/navbar.html.twig' %}
     {% endblock %}
 
-    <main class="container mx-auto px-4 py-10">
+    <main class="mb-auto container mx-auto px-4 py-10">
         {% block body %}{% endblock %}
     </main>
 
