--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,7 @@
 
 {% block navbar %}{% endblock %}
  
-<div class="max-w-sm mx-auto bg-opacity-90 p-8 rounded-2xl shadow-md">
+<div class="max-w-sm mx-auto bg-opacity-90 p-8 rounded-2xl shadow-md shadow-lightgreen">
     {# <img src="{{ asset('images/logo.png') }}" alt="Logo"> #}
     <h2 class="text-2xl font-semibold text-dark mb-6">Register</h2>
 
