change: removed catchlocation, added form to save location in fishing

--- a/templates/panel/fishing/index.html.twig
+++ b/templates/panel/fishing/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CatchController!{% endblock %}
+{% block title %}Hello fishing!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>/app/src/Controller/CatchController.php</code></li>
-        <li>Your template at <code>/app/templates/catch/index.html.twig</code></li>
+        <li>Your controller at <code>/app/src/Controller/fishing.php</code></li>
+        <li>Your template at <code>/app/templates/fishing/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
