--- a/templates/panel/index.html.twig
+++ b/templates/panel/index.html.twig
@@ -8,7 +8,7 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         {% set cards = [
-            { title: "🎣 Add new catch", description: "Add new catch", route: "/catch/new"},
+            { title: "🎣 Add new fishing", description: "Add new fishing", route: "/fishing/new"},
         ] %}
 
         {% for card in cards %}
