--- a/templates/panel/fish/add.html.twig
+++ b/templates/panel/fish/add.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     {{ form_start(addFishForm) }}
         <div class="space-y-4">
-          {{ form_row(addFishForm.species_id, {
+          {{ form_row(addFishForm.species, {
               attr: { 
-                  id: 'species_id',
+                  id: 'species',
                   class: 'block w-full border-0 border-b border-gray-400 focus:darkgreen focus:outline-none focus:ring-0 pt-5', 
                   placeholder: 'Species'
               },
