fix: login,register styling

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
         {% block header %}
             {% include 'partials/header.html.twig' %}
         {% endblock %}
-        <main class="mb-auto container m-auto px-4 py-10">
+        <main class="px-4 py-10">
             {% block body %}{% endblock %}
         </main>
     </div>
