--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -63,6 +63,9 @@
                 class="btn-primary">
                 Register
             </button>
+            <div class="flex justify-center mt-6 gap-1">
+            <span class="color-textsecondary">Already a member?</span><a class="color-accent font-medium" href="/login">Sign in</a> 
+            </div>
         </div>
     {{ form_end(registrationForm) }}
 {% endblock %}
