--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,7 +3,12 @@
 @tailwind utilities;
 
 body {
-    background-color: skyblue;
+    margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  background-color:#F3F4F6;
 }
 /* styles */
 .btn-primary {
