--- a/templates/panel/index.html.twig
+++ b/templates/panel/index.html.twig
@@ -19,7 +19,7 @@
         {% endif %}
 
         {% for card in cards %}
-            <a href={{card.route}} class="block p-6 bg-white dark:bg-zinc-900 border border-zinc-200 dark:border-zinc-800 rounded-2xl shadow hover:shadow-md transition">
+            <a href={{card.route}} class="block p-6 bg-white border border-zinc-200 rounded-2xl shadow hover:shadow-md transition">
                 <div class="text-xl font-medium mb-2">{{ card.title }}</div>
                 <p class="text-zinc-500 dark:text-zinc-400">{{ card.description }}</p>
             </a>
