--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -1,11 +1,30 @@
-    <sidebar class="min-w-fit bg-white rounded-r-lg">
-        <div class="flex flex-col w-[256px] p-4">
-            <img class="w-[150px] mb-10 pr-3"src="{{ asset('images/wobbleit-logo-transparent.png') }}" alt="logo"/>
-
-            <h1 class="text-xl font-bold tracking-wide">Pages</h1>
-            <nav class="space-x-4 flex flex-col">
-                <a href="{{ path('app_login') }}" class="hover:text-primary">Login</a>
-                <a href="{{ path('app_register') }}" class="hover:text-primary">Register</a>
-            </nav>
+    {% set menuItems = [
+        { title: 'Dashboard', route: '/panel', subpages: [], icon:"{{ asset('images/wobbleit-logo-transparent.png') }}"  },
+        { title: 'E-Commerce', route: '/login', subpages: [], icon:"{{ asset('images/wobbleit-logo-transparent.png') }}"  },
+        { title: 'Community', route: '/login', subpages: [], icon:"{{ asset('images/wobbleit-logo-transparent.png') }}" },
+    ] %}
+<sidebar class="h-full min-w-fit bg-white rounded-r-2xl flex flex-col w-[256px] p-4 shadow-sm">
+<img class="w-[150px] mb-10 mt-2 pr-3"src="{{ asset('images/wobbleit-logo-transparent.png') }}" alt="logo"/>
+<h3 class="text-sm uppercase text-gray-400 font-semibold pl-3 tracking-wide mb-2">
+    <span >Pages</span>
+</h3>
+    {% for item in menuItems %}
+    
+    <div class="p-3 rounded-lg cursor-pointer">
+        <div class="flex items-center">
+            <img class="w-4 fill-accent"src="{{ asset('images/layout-alt.svg') }}"/>
+            <a href="{{item.route}}" class="text-sm font-medium ml-4 text-gray-800">{{ item.title }}</a>
+            {% if item.subpages|length > 0 %}
+                <div class="flex shrink-0 ml-2"><svg class="w-3 h-3 shrink-0 ml-1 fill-current text-gray-400 dark:text-gray-500 false" viewBox="0 0 12 12"><path d="M5.9 11.4L.5 6l1.4-1.4 4 4 4-4L11.3 6z"></path></svg></div>
+            {% endif %}
         </div>
-    </sidebar>
+{#         {% if item.subpages|length > 0 %}
+            <div class="text-sm font-medium">
+                {% for sub in item.subpages %}
+                    <a href="#" class="block hover:underline">{{ sub }}</a>
+                {% endfor %}
+            </div>
+        {% endif %} #}
+    </div>
+{% endfor %}
+</sidebar>
