--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
 </head>
 <body class="antialiased font-body">
     <div id="root">
-    <div class="flex h-screen overflow-hidden">
+    <div class="flex h-screen overflow-hidden max-w-6xl m-auto">
     {% block sidebar %}
         {% include 'partials/sidebar.html.twig' %}
     {% endblock %}
