--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,16 +4,19 @@
 
 body {
     margin: 0;
-  padding: 0;
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  background-color:#F3F4F6;
+    padding: 0;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    background-color: #f3f4f6;
 }
 /* styles */
 .btn-primary {
-    @apply w-full bg-buttonprimary text-white font-semibold py-2 rounded-lg hover:bg-opacity-90 transition mt-5 py-3;
+    @apply w-full bg-buttonprimary text-white font-semibold rounded-lg hover:bg-opacity-90 transition my-5 py-3;
 }
 .input-primary {
-    @apply w-full px-4 py-2 border rounded-md outline-none focus:border-accent text-textsecondary placeholder-gray-400 mb-4
+    @apply w-full px-4 py-2 border rounded-md outline-none focus:border-accent text-textsecondary placeholder-gray-400 mb-4;
+}
+.card-primary {
+    @apply block p-6 bg-white border border-zinc-200 rounded-2xl shadow hover:shadow-md transition;
 }
