--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -4,7 +4,7 @@
         { title: 'Community', route: '/login', subpages: [], icon:"{{ asset('images/wobbleit-logo-transparent.png') }}" },
     ] %}
 <sidebar class="h-full min-w-fit bg-white rounded-r-2xl flex flex-col w-[256px] p-4 shadow-sm">
-<img class="w-[150px] mb-10 mt-2 pr-3"src="{{ asset('images/wobbleit-logo-transparent.png') }}" alt="logo"/>
+<a href="/panel"><img class="w-[150px] mb-10 mt-2 pr-3"src="{{ asset('images/wobbleit-logo-transparent.png') }}" alt="logo"/></a>
 <h3 class="text-sm uppercase text-gray-400 font-semibold pl-3 tracking-wide mb-2">
     <span >Pages</span>
 </h3>
