--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -1,6 +1,6 @@
     {% set menuItems = [
         { title: 'Dashboard', route: '/panel', subpages: [], icon:"{{ asset('images/wobbleit-logo-transparent.png') }}"  },
-        { title: 'E-Commerce', route: '/login', subpages: [], icon:"{{ asset('images/wobbleit-logo-transparent.png') }}"  },
+        { title: 'Fishing manage', route: '/fishing/manage', subpages: [], icon:"{{ asset('images/wobbleit-logo-transparent.png') }}"  },
         { title: 'Community', route: '/login', subpages: [], icon:"{{ asset('images/wobbleit-logo-transparent.png') }}" },
     ] %}
 <sidebar class="h-full min-w-fit bg-white rounded-r-2xl flex flex-col w-[256px] p-4 shadow-sm">
