--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -23,3 +23,6 @@ body {
 path{
     @apply fill-current;
 }
+.btn-icon {
+    @apply  bg-buttonprimary text-white font-semibold rounded-r-md hover:bg-opacity-90 transition p-2 place-items-center;
+}
